# GRRBase

./: .gitignore  LICENSE  README.md  Swerve.md  build.gradle
.github/workflows/: dashboard.yml  main.yml  robot-code.yml
.wpilib/: wpilib_preferences.json
dashboard/: .gitignore  .prettierrc  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.svelte  constants.ts  main.ts  ntStores.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: main.rs
dashboard/src/components/: ConnectingDialog.svelte  NavBar.svelte
dashboard/src/components/analysis/: Field.svelte  LineGraph.svelte  NetworkTablesList.svelte
dashboard/src/lib/: MessagePack.ts  NTSvelte.ts  NTSvelteOld.ts
dashboard/src/tabs/: Analysis.svelte  AutoSelection.svelte  DriverView.svelte
epilogue/: README.md  build.gradle  settings.gradle
epilogue/buildSrc/src/main/groovy/: epilogue.java-conventions.gradle
epilogue/epilogue-processor/: build.gradle
epilogue/epilogue-runtime/: build.gradle
src/main/deploy/blacklight/: README.md  layout.json
src/main/deploy/choreo/: README.md
src/main/deploy/joystickprofiles/: CoDriverLeft.json  README.md
src/main/java/com/choreo/lib/: Choreo.java  ChoreoControlFunction.java  ChoreoTrajectory.java  ChoreoTrajectoryState.java
src/main/java/org/team340/lib/: GRRDashboard.java  (+2 more)
vendordeps/: ChoreoLib-2025.0.0.json  ChoreoLib2025Beta.json  Phoenix6.json  ReduxLib-2025.0.1.json  ReduxLib-2026.0.0-beta1.json  ReduxLib_2024.json  photonlib.json
(+267 files in other folders)
