[package]
name = "grrdashboard"
version = "2025.0.0"
edition = "2021"
description = "A custom built dashboard by Team 340 for the FIRST Robotics Competition"
repository = "https://github.com/Greater-Rochester-Robotics/GRRBase.git"
homepage = "https://team340.org"
authors = ["Team 340"]
license = "MIT"

[lib]
name = "grrdashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

